syntax = "proto3";

package backend.aspect;

import "model.proto";

option java_package = "com.yanivian.connect.backend.proto.aspect";
option java_multiple_files = true;

message ChatGistInfo {
  string ChatID = 1;
  // Most current timestamp in milliseconds.
  int64 TimestampMillis = 2;
  repeated UserInfo Participants = 3;
  string UniqueParticipantsSearchKey = 4;
  ChatMessageInfo LatestMessage = 5;
  optional int64 LastSeenMessageID = 6;
  repeated UserInfo TypingUsers = 7;
  optional string DraftText = 8;
}

message ChatMessageInfo {
  int64 MessageID = 1;
  // Most current timestamp in milliseconds.
  int64 TimestampMillis = 2;
  UserInfo Poster = 3;
  optional string Text = 4;
}

message ChatSlice {
  ChatGistInfo Gist = 1;
  // Slice of messages, possibly entire, ordered most recent first.
  repeated ChatMessageInfo Messages = 2;
}

message ChatsSnapshot {
  repeated ChatSlice Chats = 1;
}

message ConnectionAddedResult {
  UserInfo User = 1;
  bool IsConnected = 2;
}

message ConnectionsSnapshot {
  // List of contacts that you have invited to use the app.
  repeated .backend.model.Contact Invites = 1;
  // List of users that have invited you to use the app.
  repeated UserInfo Inviters = 2;
  // Your connections.
  repeated UserInfo Connections = 3;
  // List of users that have asked to connect with you.
  repeated UserInfo Incoming = 4;
  // List of users with whom you have asked to connect.
  repeated UserInfo Outgoing = 5;
}

message UserInfo {
  string UserID = 1;
  // Most current timestamp in milliseconds.
  int64 TimestampMillis = 2;
  // The phone number is populated for connected users.
  optional string PhoneNumber = 3;
  optional string Name = 4;
  optional .backend.model.Image Image = 5;
}